--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <div></div>
     <div class="calculator-flex">
         <div class="display">
-        <div data-prevous-operand id="previous-operand">1123</div>
-        <div data-current-operand id="current-operand">1232</div>
+        <div data-previous-operand id="previous-operand"> </div>
+        <div data-current-operand id="current-operand"> </div>
         </div>
         <div class="row-flex">
         <button data-allclear class="flex-two colour">AC</button>
@@ -25,7 +25,7 @@
         <button data-operation class="colour">/</button>
         </div>
         <div class="row-flex">
-        <button data-number >7</button>
+        <button data-number>7</button>
         <button data-number>8</button>
         <button data-number>9</button>
         <button data-operation class="colour">*</button>
@@ -40,7 +40,7 @@
         <button data-number>1</button>
         <button data-number>2</button>
         <button data-number>3</button>
-        <button data-operation="" class="colour">–</button>
+        <button data-operation="" class="colour">-</button>
         </div>
         <div class="row-flex">
         <button data-number>.</button>
